Bug 156756 - Icon sizes for the toolbar don't correspond to the actual sizes of icons
Summary: Icon sizes for the toolbar don't correspond to the actual sizes of icons
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.6.0.0 beta1+
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.2.0 target:7.6.3
Keywords: bibisected, bisected, regression
: 157539 157813 (view as bug list)
Depends on:
Blocks: Icon-Themes-Code
  Show dependency treegraph
 
Reported: 2023-08-13 17:37 UTC by David García
Modified: 2023-11-23 14:46 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Video to show how the different sizes are displayed (3.97 MB, video/mp4)
2023-08-13 17:37 UTC, David García
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David García 2023-08-13 17:37:01 UTC
Description:
Hi,

On LibreOffice 7.6.0.3, in Tools > Options > View, you can change the icon size for the toolbar. "Small" should correspond with the smallest size, "extra large" with the largest size, and so on, but this is not the case. I've made a video so you can see what's going on.

Also, when I select an icon size, close LibreOffice and reopen it, the size of icons is changed.

Steps to Reproduce:
1. Go to Tools > Options > View.
2. Try an icon size for the toolbar
3. Click on "Apply".
4. Try a different icon size.
5. Click on "Apply".
6. Compare the results.

Actual Results:
The actual sizes don't correspond with the names of the sizes. Everything seems a bit random.

Expected Results:
"Small" should be the smallest size, "extra large" should be the largest, etc.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.6.0.3 (X86_64) / LibreOffice Community
Build ID: 69edd8b8ebc41d00b4de3915dc82f8f0fc3b6265
CPU threads: 16; OS: Windows 10.0 Build 22621; UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: en-GB
Calc: CL threaded
Comment 1 David García 2023-08-13 17:37:56 UTC
Created attachment 188950 [details]
Video to show how the different sizes are displayed
Comment 2 m_a_riosv 2023-08-13 23:37:50 UTC
A mess also with
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 218a7650a5cf03f895bed19c68d6f02daec536e9
CPU threads: 16; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL threaded
Comment 3 m_a_riosv 2023-08-13 23:39:25 UTC
Works fine
Version: 7.5.6.0.0+ (X86_64) / LibreOffice Community
Build ID: f3b62a9fb3ae38a152fe95dac53903bd1751595c
CPU threads: 16; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL threaded
Comment 4 Faisal 2023-09-08 20:04:46 UTC
I can reproduce with

Version: 7.6.0.3 (X86_64) / LibreOffice Community
Build ID: 60(Build:3)
CPU threads: 4; OS: Linux 6.1; UI render: default; VCL: kf5 (cairo+wayland)
Locale: en-US (en_US.UTF-8); UI: en-US
7.6.0-1
Calc: threaded
Comment 5 David García 2023-09-11 23:50:21 UTC
The problem persists in 7.6.1.2.

Version: 7.6.1.2 (X86_64) / LibreOffice Community
Build ID: f5defcebd022c5bc36bbb79be232cb6926d8f674
CPU threads: 16; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: es-ES
Calc: CL threaded
Comment 6 Kira Tubo 2023-09-23 04:12:27 UTC
Bibisected win64-7.6 repo. Added Noel Grandin to cc. 

Regression occurring at:
https://git.libreoffice.org/core/+/0558926c2f9201a12b4c46efc36b8a4080af4d46

--------------
commit 0558926c2f9201a12b4c46efc36b8a4080af4d46	[log]
author	Noel Grandin <noel.grandin@collabora.co.uk>	Tue Jun 06 10:42:10 2023 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	Tue Jun 06 20:45:52 2023 +0200
tree 7a13040d1aae85340ec5d9fe7e880ec8009fbab3
parent c9d92e3a33e5f21ac2c72c58d49eeb138cece109 [diff]
---------------- c9c0bbf2299e4af31ff64331eda5758a63e35f15 is the first bad commit
commit c9c0bbf2299e4af31ff64331eda5758a63e35f15
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Thu Jun 8 08:28:03 2023 -0700

    source 0558926c2f9201a12b4c46efc36b8a4080af4d46
----------------

Reproduced on:
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 486ae5db6987411d5e394de94b2b077099d03856
CPU threads: 6; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 7 Stéphane Guillou (stragu) 2023-09-30 20:39:26 UTC
*** Bug 157539 has been marked as a duplicate of this bug. ***
Comment 8 BogdanB 2023-09-30 20:51:53 UTC
I tried to bibisect this on the duplicated bug, and I notice some things:
- in the newest version of 7.6 it's a complete mess, you choose Large and all the icons are small
- in the oldest version of 7.6 it's better, the single problem is that, if I choose Small icons are small, BUT if I choose Automatic, the option move to the previous option, in this case Small.
Comment 9 Commit Notification 2023-10-02 11:41:38 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/715a6ea8cb3aa6c80edbb22909aac3f18b7daec6

tdf#156756 Icon sizes for the toolbar wrong

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2023-10-02 16:07:16 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/8275b70aae25f48817747bdfbfcfcaf1197c550c

tdf#156756 Icon sizes for the toolbar wrong

It will be available in 7.6.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 BogdanB 2023-10-02 18:40:03 UTC
Noel, I am testing this bug, and I get a crash, but not from this change, but could be related: please try this:

1. Change icons to Small, press Apply. → Everything fine.
2. Now try to change the Icon Theme to something else. → Crash.

Was working until recently.

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: d97b5849f3cfcecbdd929dca7bd7ac2c4fa31f8b
CPU threads: 16; OS: Linux 6.2; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 12 Commit Notification 2023-10-03 08:54:46 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d95f58a1ebf2ff7fb163cd423df16b4a6167a8fa

tdf#156756 Icon sizes for the toolbar wrong (part2)

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Noel Grandin 2023-10-03 08:55:53 UTC
(In reply to BogdanB from comment #11)
> Noel, I am testing this bug, and I get a crash, but not from this change,
> but could be related: please try this:
> 

You are correct, I made a mistake in my change, fixed now.
Comment 14 BogdanB 2023-10-03 10:49:55 UTC
Thanks, Noel. Everything working well.

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 6dd514f633211b3cd6a6096b687c4e51a331ee4b
CPU threads: 16; OS: Linux 6.2; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 15 Commit Notification 2023-10-03 14:46:28 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/c06ddc21e151dd7bdce0c8155e124dbbb0684050

tdf#156756 Icon sizes for the toolbar wrong (part2)

It will be available in 7.6.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Stéphane Guillou (stragu) 2023-10-18 14:08:57 UTC
*** Bug 157813 has been marked as a duplicate of this bug. ***
Comment 17 David García 2023-11-23 14:46:30 UTC
Fixed in 7.6.3.2!

Version: 7.6.3.2 (X86_64) / LibreOffice Community
Build ID: 29d686fea9f6705b262d369fede658f824154cc0
CPU threads: 16; OS: Windows 10.0 Build 22631; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: es-ES
Calc: CL threaded