tdf#156756 Icon sizes for the toolbar wrong

So my change in
    commit 0558926c2f9201a12b4c46efc36b8a4080af4d46
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Tue Jun 6 10:42:10 2023 +0200
    use more officecfg for SvtMiscOptions

Made an existing bug much worse.

The underlying bug started in
    commit fd92b09db497a7dfd594a5418f87856dc3886bf9
    Author: Caolán McNamara <caolanm@redhat.com>
    Date:   Tue Feb 14 13:12:38 2023 +0000
    tdf#153541 notify listeners when any of the icon sizes change

which resulted in changes to icon sizes not being saved to the registry,
because the registry layer would throw an exception when called from
SvtMiscOptions_Impl::ImplCommit, because it does not like being passed
null values for SidebarIconSize and NotebookbarIconSize properties.

So I have done two things
(1) finish removing handling of SymbolSet from the SvtMiscOptions_Impl
code, and just use the officecfg:: layer.
(2) Change the ImplCommit code to only pass down properties for which it
actually has valid values.

Change-Id: Ib7c09cac373060f5437b81c63e9b12411fdc1c68
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157483
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit 715a6ea8cb3aa6c80edbb22909aac3f18b7daec6)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157459
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>